# Static_test_LF

./: DeterminismTest_C.lf  DeterminismTest_Python.lf  HelloWorld_C.lf  HelloWorld_Python.lf  README.md  out_c.txt  out_c_clean.txt  out_python.txt  run_and_compare.sh
include/DeterminismTest_Python/: DeterminismTest_Python.h  Logger.h  SourceA.h
src-gen/DeterminismTest_C/: CMakeLists.txt  DeterminismTest_C.c  _adder.c  _adder.h  _determinismtest_c_main.c  _determinismtest_c_main.h  _logger.c  _logger.h  _sourcea.c  _sourcea.h  _sourceb.c  _sourceb.h
src-gen/DeterminismTest_C/include/DeterminismTest_C/: Adder.h  DeterminismTest_C.h  Logger.h  SourceA.h  SourceB.h
src-gen/DeterminismTest_Python/: CMakeLists.txt  DeterminismTest_Python.c  DeterminismTest_Python.py  _adder.c  _adder.h  _determinismtest_python_main.c  _determinismtest_python_main.h  _logger.c  _logger.h  _sourcea.c  _sourcea.h  _sourceb.c  _sourceb.h
src-gen/DeterminismTest_Python/include/DeterminismTest_Python/: Adder.h  SourceB.h
src-gen/HelloWorld_C/: CMakeLists.txt  HelloWorld_C.c  _helloworld_c_main.c  _helloworld_c_main.h
src-gen/HelloWorld_C/include/HelloWorld_C/: HelloWorld_C.h
src-gen/HelloWorld_Python/: CMakeLists.txt  HelloWorld_Python.c  HelloWorld_Python.py  _helloworld_python_main.c  _helloworld_python_main.h
src-gen/HelloWorld_Python/LinguaFrancaBase/: classes.py
src-gen/HelloWorld_Python/include/HelloWorld_Python/: HelloWorld_Python.h
